--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Starter HTML Template</title>
+    <title>Traffic lights</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -12,7 +12,7 @@
         <h1>Starter HTML Template</h1>
     </main>
     <aside>
-      
+
     </aside>
     <script src="js/main.js"></script>
   </body>
