--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main id="main">
-        <h1>Starter HTML Template</h1>
+        <h1>Ooo traffic lights</h1>
     </main>
     <aside>
 
